# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "legionemb"
version = "0.1.0"
edition = "2018"

[lib]
name = "legionlib"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module"]

[dependencies]
legion = "0.4.0"